# ICBot-Backend

./: Cargo.toml  README.md  dfx.json  justfile  package-lock.json  package.json  webpack.config.js
src/ICBot_backend/: Cargo.toml  ICBot_backend.did
src/ICBot_backend/src/: error.rs  lib.rs  uuid.rs  wallet.rs
src/money_manager_backend/: Cargo.toml  money_manager_backend.did
src/money_manager_backend/src/: error.rs  lib.rs  wallet.rs
src/money_manager_frontend/src/: index.html  index.js
