[package]
name = "ICBot_backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[dependencies]
candid = "0.10"
dotenvy = "0.15.7"
fastrand = "2.0.1"
ic-cdk = "0.12"
ic-cdk-timers = "0.6"                              # Feel free to remove this dependency if you don't need timers
ic-ledger-types = "0.9.0"
itertools = "0.12.0"
serde = "1.0.196"
uuid = { version = "1.6.1", features = ["serde"] }
